--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dans Auto Repair</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-	<link rel="icon" type="image/x-icon" href="favicon.ico?">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
